@@ -1,5 +1,15 @@
 2008-11-25  Robert Staudinger  <robsta@gnome.org>
 
+	* ccss/ccss-function.h:
+	* ccss/ccss-property-generic.c:
+	* ccss/ccss-property.c:
+	* ccss/ccss-property.h:
+	* ccss/ccss-selector.c (ccss_selector_copy):
+	* ccss/ccss.c:
+	Fix warnings.
+
+2008-11-25  Robert Staudinger  <robsta@gnome.org>
+
 	* Makefile.am:
 	* ccss-clutter/Makefile.am:
 	* ccss-clutter/ccss-clutter.c:
